Fix jump between field edit mode

--- a/src/app/portlets/shared/dot-content-types-edit/components/fields/dot-content-type-fields-variables/components/dot-content-type-fields-variables-table-row/dot-content-type-fields-variables-table-row.component.scss
+++ b/src/app/portlets/shared/dot-content-types-edit/components/fields/dot-content-type-fields-variables/components/dot-content-type-fields-variables-table-row/dot-content-type-fields-variables-table-row.component.scss
@@ -8,56 +8,31 @@
         width: 100%;
     }
 
-    .empty-placeholder {
-        color: $gray-light;
-    }
-
-    .field-variable-row-highlight {
-        background-color: $gray-bg;
-    }
-
     p-celleditor {
-        span {
-            display: block;
-            height: $basic-padding * 4;
-            @include truncate-text;
-        }
-        input {
-            font-size: $font-size-medium;
+        cursor: pointer;
+    }
 
-            &:disabled {
-                box-shadow: none;
-                color: $black;
-            }
+    .field-variable-row td,
+    .field-variable-row .content-type-fields__variables-actions {
+        padding: 0;
+        height: $basic-padding * 8;
+        vertical-align: middle;
+
+        &:first-child {
+            padding-left: $basic-padding * 3;
+        }
+
+        &:last-child {
+            padding-right: $basic-padding * 3;
         }
     }
-}
 
-::ng-deep .ui-table .ui-table-tbody tr.field-variable-row td {
-    height: auto;
-    padding: 10px $basic-padding * 2 $basic-padding;
+    .field-variable-row .content-type-fields__variables-actions {
+        text-align: right;
 
-    &.content-type-fields__variables-actions {
-        padding: 10px 16px 2px;
-
-        & > div {
-            text-align: right;
+        & > * {
+            margin-left: $basic-padding;
         }
 
-        #content-type-fields__variables-actions-edit {
-            margin-top: 7px;
-        }
-
-        button {
-            margin-right: $basic-padding;
-
-            &:last-child {
-                margin-right: 0;
-            }
-        }
-
-        dot-icon-button button {
-            margin-right: 0;
-        }
     }
 }
